Cascading Change Log

2.1.5 [unreleased]

  Fixed issue where c.c.CascadeListener was receiving null as the c.c.Cascade parameter.

2.1.4

  Added ability to capture frameworks used in an application via c.p.AppProps.

  Restored platform test compatibility with Cascading 2.0.x via return of c.p.PlatformRunner.Platform annotation
  and deprecated c.t.LocalPlatform and c.t.HadoopPlatform platform implementations.

2.1.3

  Fix for extra trailing ']' in c.t.Tap#toString().

  Fix for c.f.FlowProcess#getNumProcessSlices() incorrectly returning zero in local mode, should be 1.

  Fix for c.p.a.AggregateBy not honoring the global system property threshold value if not overridden on the ctor.

  Fix for NPE if c.f.FlowProcess returns null config.

  Fixed issue where a c.f.FlowStep would attempt to detect if it should be skipped regardless of whether the "runID"
  had been set or not on the c.f.Flow enabling restartable flows.

2.1.2

  Fixed issue where c.f.FlowProcess#openForWrite on Hadoop would re-use the existing o.a.h.m.OutputCollector instance
  as that used in the current task.

  Fixed issue where fetching remote Hadoop counter values could block indefinitely. Fetching remote counters is now
  serialized across jobs to prevent deadlocks inside the Hadoop API and counter values are now cached with a final
  refresh on job completion.

  Fixed issue where NPE could be thrown by c.s.CascadingStats#getCounterValue if given counter had no value.

2.1.1

  Fixed issue where c.s.h.TextDelimited would not honor charsetName.

  Fixed issue where c.t.BaseTemplateTap would lose parent fields if they were declared as Fields.ALL.

  Fixed issue where c.t.Fields#append would not include current Fields instance when appending an array of Fields
  instances.

  Fixed issue where subsequent c.p.Merge pipes in a pipeline path would obscure prior Merges preventing a c.t.Tap
  insertion during planning resulting in a missing Tap configuration resource property.
