@@ -2,6 +2,8 @@ Cascading Change Log
 
 2.1.5 [unreleased]
 
+  Updated c.t.h.u.BytesComparator to implement c.t.Hasher as a convenience.
+
   Fixed issue where c.c.CascadeListener was receiving null as the c.c.Cascade parameter.
 
 2.1.4
